; ModuleID = '/home/carl/AnghaBench/h2o/lib/handler/status/extr_durations.c_duration_stats_init.c'
source_filename = "/home/carl/AnghaBench/h2o/lib/handler/status/extr_durations.c_duration_stats_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.st_duration_stats_t = type { i32, i8*, i8*, i8*, i8*, i8*, i8*, i8* }

@GK_EPSILON = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.st_duration_stats_t*)* @duration_stats_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @duration_stats_init(%struct.st_duration_stats_t* %0) #0 {
  %2 = alloca %struct.st_duration_stats_t*, align 8
  store %struct.st_duration_stats_t* %0, %struct.st_duration_stats_t** %2, align 8
  %3 = load i32, i32* @GK_EPSILON, align 4
  %4 = call i8* @gkc_summary_alloc(i32 %3)
  %5 = load %struct.st_duration_stats_t*, %struct.st_duration_stats_t** %2, align 8
  %6 = getelementptr inbounds %struct.st_duration_stats_t, %struct.st_duration_stats_t* %5, i32 0, i32 7
  store i8* %4, i8** %6, align 8
  %7 = load i32, i32* @GK_EPSILON, align 4
  %8 = call i8* @gkc_summary_alloc(i32 %7)
  %9 = load %struct.st_duration_stats_t*, %struct.st_duration_stats_t** %2, align 8
  %10 = getelementptr inbounds %struct.st_duration_stats_t, %struct.st_duration_stats_t* %9, i32 0, i32 6
  store i8* %8, i8** %10, align 8
  %11 = load i32, i32* @GK_EPSILON, align 4
  %12 = call i8* @gkc_summary_alloc(i32 %11)
  %13 = load %struct.st_duration_stats_t*, %struct.st_duration_stats_t** %2, align 8
  %14 = getelementptr inbounds %struct.st_duration_stats_t, %struct.st_duration_stats_t* %13, i32 0, i32 5
  store i8* %12, i8** %14, align 8
  %15 = load i32, i32* @GK_EPSILON, align 4
  %16 = call i8* @gkc_summary_alloc(i32 %15)
  %17 = load %struct.st_duration_stats_t*, %struct.st_duration_stats_t** %2, align 8
  %18 = getelementptr inbounds %struct.st_duration_stats_t, %struct.st_duration_stats_t* %17, i32 0, i32 4
  store i8* %16, i8** %18, align 8
  %19 = load i32, i32* @GK_EPSILON, align 4
  %20 = call i8* @gkc_summary_alloc(i32 %19)
  %21 = load %struct.st_duration_stats_t*, %struct.st_duration_stats_t** %2, align 8
  %22 = getelementptr inbounds %struct.st_duration_stats_t, %struct.st_duration_stats_t* %21, i32 0, i32 3
  store i8* %20, i8** %22, align 8
  %23 = load i32, i32* @GK_EPSILON, align 4
  %24 = call i8* @gkc_summary_alloc(i32 %23)
  %25 = load %struct.st_duration_stats_t*, %struct.st_duration_stats_t** %2, align 8
  %26 = getelementptr inbounds %struct.st_duration_stats_t, %struct.st_duration_stats_t* %25, i32 0, i32 2
  store i8* %24, i8** %26, align 8
  %27 = load i32, i32* @GK_EPSILON, align 4
  %28 = call i8* @gkc_summary_alloc(i32 %27)
  %29 = load %struct.st_duration_stats_t*, %struct.st_duration_stats_t** %2, align 8
  %30 = getelementptr inbounds %struct.st_duration_stats_t, %struct.st_duration_stats_t* %29, i32 0, i32 1
  store i8* %28, i8** %30, align 8
  %31 = load %struct.st_duration_stats_t*, %struct.st_duration_stats_t** %2, align 8
  %32 = getelementptr inbounds %struct.st_duration_stats_t, %struct.st_duration_stats_t* %31, i32 0, i32 0
  %33 = call i32 @memset(i32* %32, i32 0, i32 4)
  ret void
}

declare dso_local i8* @gkc_summary_alloc(i32) #1

declare dso_local i32 @memset(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
